re PR c++/10451 (ICE in grokdeclarator on spurious mutable declaration)

PR c++/10451
	* decl.c (grokdeclarator): Correct logic for "mutable" errors.

	PR c++/10451
	* g++.dg/parse/crash4.C: New test.

From-SVN: r66004